[gd_scene load_steps=20 format=3 uid="uid://7plobrc5t61i"]

[ext_resource type="Texture2D" uid="uid://36opbuonihpa" path="res://assets/VFX/Exploding Banana.png" id="1_k14yn"]
[ext_resource type="Script" path="res://scenes/player/banana.gd" id="2_6eswy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h8wnj"]
atlas = ExtResource("1_k14yn")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erk46"]
atlas = ExtResource("1_k14yn")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tp4r"]
atlas = ExtResource("1_k14yn")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcgmy"]
atlas = ExtResource("1_k14yn")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbvtj"]
atlas = ExtResource("1_k14yn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0sam"]
atlas = ExtResource("1_k14yn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjbmf"]
atlas = ExtResource("1_k14yn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28ygn"]
atlas = ExtResource("1_k14yn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdfrw"]
atlas = ExtResource("1_k14yn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17hn4"]
atlas = ExtResource("1_k14yn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_la0uj"]
atlas = ExtResource("1_k14yn")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vndsj"]
atlas = ExtResource("1_k14yn")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8yv0"]
atlas = ExtResource("1_k14yn")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu8tu"]
atlas = ExtResource("1_k14yn")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wp07"]
atlas = ExtResource("1_k14yn")
region = Rect2(64, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_63nl8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8wnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erk46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tp4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcgmy")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbvtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0sam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjbmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28ygn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdfrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17hn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la0uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vndsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8yv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu8tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wp07")
}],
"loop": true,
"name": &"explosion",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssylu"]
size = Vector2(13, 14)

[node name="banana" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_63nl8")
script = ExtResource("2_6eswy")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_ssylu")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
